--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 flask = "^2.3.2"
+flask-sqlalchemy = "^3.0.5"
 
 
 [build-system]
