--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.11"
 flask = "^2.3.2"
 flask-sqlalchemy = "^3.0.5"
+bootstrap-flask = "^2.3.0"
+flask-wtf = "^1.1.1"
 
 
 [build-system]
